create test for auth controller
